<resources>
    <string name="app_name">Sportko</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account?</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_event">Create event</string>
    <string name="event_photo">Event photo</string>
    <string name="location">Location</string>
    <string name="date_and_time_of_event">Date and time of event</string>
    <string name="when">When?</string>
    <string name="pick_date_time">Pick date and time</string>
    <string name="open_positions">Open positions</string>
    <string name="required_field">This field is required</string>
    <string name="event_type">Type of event</string>
    <string name="attending">Attending</string>
    <string name="date">Date</string>
    <string name="attend">Attend</string>
    <string name="edit_event">Edit event</string>
    <string name="finished">Finished</string>
    <string name="full">Full</string>
    <string name="no_upcoming_events">No events.</string>
    <string name="no_internet">No Internet connection.</string>
    <string name="where">Where?</string>
    <string name="cannot_attend_full_event">You cannot attend a full event.</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="my_events">My Events</string>

    <string name="username">Username</string>
    <string name="use_location">Use location?</string>
    <string name="number_of_attendees">Number of attendees</string>
    <string name="created_by">Created by:</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="denied_pemission">Permission denied. Place suggestions will not be relevant to your location</string>
    <string name="error">An error has occurred. Please try again.</string>
    <string name="google_play_not_available">Google Play Services are not available. Please install Google Play Services
        in order to use this feature.
    </string>
    <string name="number_position_greater_zero">The number of open positions must be greater than 0</string>
    <string name="hello">Hello</string>
    <string name="cant_edit_offline">You cannot edit events while offline. Please connect to the Internet in order to
        make changes.
    </string>
    <string name="cant_insert_offline">You cannot create events while offline. Please connect to the Internet in order to
        make changes.</string>
    <string name="cant_delete_offline">You cannot delete events while offline. Please connect to the Internet in order to
        make changes.</string>
    <string name="cant_register_offline">You cannot register while offline. Please connect to the Internet in order to
        make changes.</string>
    <string name="delete_event">Delete Event</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cannot_be_undone_delete">This action cannot be undone. Please confirm if you really want to delete
        this event.
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_edited">Event Edited</string>
    <string name="event_deleted">Event Cancelled</string>
    <string name="event_cancelled">The %s event you are attending has been cancelled.</string>
    <string name="event_edited_desc">The %s event you are attending has been edited. Take a look!</string>
    <string name="search">Search</string>
    <string name="new_attendee">A new user is attending your event %s</string>
    <string name="new_event_attendee">New Attendee</string>
    <string name="attendee_cancelled">A user has cancelled his/her participation in your event %s</string>
    <string name="atendee_cancelled_attendance">New cancellation</string>
    <string name="who_s_going">Who\'s going?</string>
    <string name="profile_photo">Profile photo</string>
    <string name="share_event">Share event</string>
    <string name="check_out_event">Hey, check out this event:</string>
    <string name="share">Share</string>
    <string name="please_wait">Please wait...</string>
    <string name="get_directions">Get Directions</string>
    <string name="failed_create_user">Failed to create user. Please try again.</string>


</resources>
