<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/container"
                android:layout_centerInParent="true"

    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/etEmailLayout"
                    app:boxStrokeColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:textColorHint="@android:color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordLayout"
                    app:boxStrokeColor="@android:color/white"
                    android:textColorHint="@android:color/white"

                    android:layout_below="@id/etEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/login"
                    android:minWidth="200dp"
                    android:layout_below="@id/passwordLayout"
                    android:background="@color/colorPrimary"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorPrimary"/>


            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:minWidth="200dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:id="@+id/register"
                    android:layout_below="@id/login"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="@color/colorPrimary"/>
        </RelativeLayout>
    </ScrollView>
    <ImageView android:layout_width="100dp" android:layout_height="100dp"
               android:src="@drawable/ic_menu_white_24dp"
               android:id="@+id/logo"
               android:layout_above="@id/container"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/logo"
               android:layout_marginTop="20dp"
    />

</RelativeLayout>