<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


<ScrollView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/containerAddEvent"
            android:layout_centerInParent="true"
            xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:cardBackgroundColor="@color/common_google_signin_btn_text_light_focused"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

            <ImageView android:layout_width="match_parent" android:layout_height="200dp"
                       android:scaleType="centerInside"
                       android:id="@+id/event_photo_edit"
                       android:contentDescription="@string/event_photo"
                       android:layout_alignParentTop="true"
                       android:layout_centerHorizontal="true"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/event_title"
                      style="@style/TextAppearance.AppCompat.Headline"
                      android:layout_below="@id/event_photo_edit"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/event_type"
                      android:layout_below="@id/event_title"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_below="@id/event_type"
                      android:layout_marginTop="5dp"
                      android:id="@+id/event_desc"
            />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/dateContainer"
            android:orientation="horizontal"
                          android:layout_marginTop="5dp"
            android:layout_below="@id/event_desc">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/ic_event_date_black_24dp"
                android:tint="@color/white"
                android:contentDescription="@string/date"
                           android:layout_marginEnd="5dp"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/event_date"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/whereContainer"
                          android:orientation="horizontal"
                          android:layout_marginTop="5dp"
                          android:layout_below="@id/dateContainer">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/ic_location_on_black_24dp"
                           android:tint="@color/white"
                           android:contentDescription="@string/location"
                           android:layout_marginEnd="5dp"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/where"/>

            </LinearLayout>


            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_marginTop="5dp"
                          android:id="@+id/attendingContainer"
                          android:layout_below="@id/whereContainer">

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/ic_person_pin_black_24dp"
                           android:tint="@color/white"
                           android:contentDescription="@string/number_of_attendees"
                           android:layout_marginEnd="5dp"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/attending"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textColor="@color/colorPrimaryDark"
                          android:layout_marginStart="5dp"
                android:id="@+id/whos_going" android:text="@string/who_s_going" />

            </LinearLayout>


            <TextView android:layout_width="wrap_content"
                      android:layout_below="@id/attendingContainer"
                      android:layout_height="wrap_content"
                      android:id="@+id/createdBy"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="5dp"
                      android:textColor="@color/white"
            />


            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attend"
                    android:id="@+id/attendEvent"
                    android:minWidth="200dp"
                    android:layout_below="@id/createdBy"
                    android:background="@color/colorPrimary"
                    android:paddingTop="15dp"
                    android:textAllCaps="true"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorPrimary"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attending"
                    android:id="@+id/attendingEvent"
                    android:minWidth="200dp"
                    android:layout_below="@id/createdBy"
                    android:background="@color/gray"
                    android:paddingTop="15dp"
                    android:textAllCaps="true"
                    android:paddingBottom="15dp"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/gray"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</ScrollView>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/share"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:tint="@color/colorPrimaryDark"
            android:layout_margin="20dp"
            android:src="@android:drawable/ic_menu_share"/>
</RelativeLayout>