<?xml version="1.0" encoding="utf-8"?>

    <ScrollView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/containerAddEvent"
                android:layout_centerInParent="true"
                xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/etEventTitle"
                    app:boxStrokeColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:textColorHint="@android:color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_event_title"
                        android:layout_width="match_parent"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/etEventDescription"
                    app:boxStrokeColor="@android:color/white"
                    android:textColorHint="@android:color/white"

                    android:layout_below="@id/etEventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/inpuut_description"
                        android:layout_width="match_parent"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event"
                    android:id="@+id/createEvent"
                    android:minWidth="200dp"
                    android:layout_below="@id/etEventDescription"
                    android:background="@color/colorPrimary"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorPrimary"/>





        </RelativeLayout>
    </ScrollView>

