<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="horizontal"
    >
        <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/event_photo"
                android:id="@+id/event_photo"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"

        />

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/background_dark"
                    android:id="@+id/eventTitle"
            />


            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageView android:layout_width="20dp"
                           android:layout_height="wrap_content"
                           android:layout_marginEnd="3dp"
                           android:src="@drawable/ic_event_date_black_24dp"
                           android:contentDescription="@string/date_and_time_of_event"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/eventDate"
                          android:textColor="@android:color/background_dark"

                />
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageView android:layout_width="20dp"
                           android:layout_height="wrap_content"
                           android:layout_marginEnd="3dp"
                           android:src="@drawable/ic_access_time_black_24dp"
                           android:contentDescription="@string/date_and_time_of_event"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/eventTime"
                          android:textColor="@android:color/background_dark"

                />
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
                <ImageView android:layout_width="20dp"
                           android:layout_marginEnd="3dp"
                           android:layout_height="wrap_content"
                           android:src="@drawable/ic_location_on_black_24dp"
                           android:contentDescription="@string/location"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/location"
                          android:textColor="@android:color/background_dark"

                />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>